# trading_simulator

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs  utils.rs
src-tauri/src/functions/: banking.rs  market.rs  mod.rs  preferences.rs  trading.rs
src/banking/: BankingInfo.css  BankingInfo.jsx
src/banking/account_helpers/: createAccount.jsx  selectAccount.jsx
src/banking/context/: AccountContext.jsx
src/banking/hooks/: useAccounts.jsx  useCurrentValue.jsx
src/banking/widgets/: AccountCard.jsx
src/contexts/: SimulatedDateContext.jsx
src/market/: MarketOverview.css  MarketOverview.jsx
src/market/context/: FavoritesContext.jsx  TickerContext.jsx
src/market/hooks/: useCompanyNews.jsx  useCompanyProfile.jsx  useCurrentPrice.jsx  useFavoriteTickers.jsx  useSearchResults.jsx  useTickerDetails.jsx  useTimeSeries.jsx
src/market/trading/: buyStock.jsx  refreshIntraday.jsx  sellStock.jsx
src/market/widgets/: TickerChart.css  TickerChart.jsx  TickerOverview.css  TickerOverview.jsx  TickerPopup.jsx
src/widgets/: Clock.jsx
