[package]
name = "trading_simulator"
version = "0.1.0"
description = "Trading simulator app"
authors = ["Andrew Heschl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trading_simulator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trading_engine = {path="../../trading_engine"}
alphavantage = {path="../../alphavantage"}
dirs = "5.0.1"
tauri-plugin-dialog = "2"

